--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,74 @@
+@font-face {
+  font-family: "Anonymous Pro";
+  src: url("/fonts/AnonymousPro-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Anonymous Pro";
+  src: url("/fonts/AnonymousPro-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Anonymous Pro";
+  src: url("/fonts/AnonymousPro-Italic.woff2") format("woff2");
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Anonymous Pro";
+  src: url("/fonts/AnonymousPro-BoldItalic.woff2") format("woff2");
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Univers";
+  src: url("/fonts/Univers-BlackExt.woff2") format("woff2");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+:root {
+  --font-anonymous-pro: "Anonymous Pro", monospace;
+  --font-univers: "Univers", sans-serif;
+}
+
+body {
+  font-family: var(--font-anonymous-pro);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-univers);
+}
+
+.font-anonymous-pro {
+  font-family: var(--font-anonymous-pro);
+}
+
+.font-univers {
+  font-family: var(--font-univers);
+}
+
+/* Your existing Tailwind directives */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Any other global styles you want to add */
+
+
